major restructuring of forms styling.  There is _way_ too much duplicate css in here.  simplifying this will make it _much_ easier to create a consistent and bugfree layout..

--- a/spine/cereweb/htdocs/css/style.css
+++ b/spine/cereweb/htdocs/css/style.css
@@ -33,6 +33,12 @@ div.title h1 {
     margin: 0.1em;
 }
 
+div.help {
+    border: 1px dotted black;
+    padding: 2px;
+    margin: 1em 1em 1em 2px;
+}
+
 /* Styles for searchpages. */
 div.searchtitle {
     border-bottom: 1px solid gray;
@@ -58,40 +64,9 @@ div.search {
     white-space: normal;
 }   
 
-/*
-div.search table{
-    width: 100%;
-}
-*/
-div.search div.help {
-    border: 1px dotted black;
-    padding: 2px;
-    margin: 2px;
-    margin-bottom: 1em;
-    margin-top: 1em;
-}
-
-/*
-div.search th{
-    background: #aac1df;
-    color: black;
-    padding: 0.3em 0.5em 0.3em 0.5em;
-    width: auto;
-    font-size: 18px;
-    margin-bottom: 0.4em;
-    text-align: left;
-}
-*/
-
-div.searchform {
+div.search form {
    padding: 0.5em 0 1em 0;
 }
-
-div.searchform select{
-    margin-bottom: 0.4em;
-    width: 13em;
-}
-
 
 div.searchform br {
     clear: left;
@@ -190,14 +165,6 @@ div.create {
     white-space: normal;
 }
 
-div.create div.help {
-    border: 1px dotted black;
-    padding: 2px;
-    margin: 2px;
-    margin-bottom: 1em;
-    margin-top: 1em;
-}
-
 div.create form {
     padding: 0.5em 0 1em 0;
 }
@@ -207,6 +174,11 @@ div.create form {
  * This is accomplished using a floated label with
  * a specified width.
  */
+form {
+    margin: 0;
+    padding 0;
+}
+
 form label {
     float: left;
     width: 7em;
@@ -226,9 +198,14 @@ form input, form textarea {
     width: auto;
     margin-bottom: 0.4em;
 }
+form select {
+    width: 12em;
+    margin-bottom: 0.4em;
+}
+
 
 /**
- * Form fields can be either optional, required or hidden.
+ * Form fields can be either optional or required.
  */
 div.optional label {
     font-weight: normal;
@@ -238,7 +215,12 @@ div.required label {
     font-style: oblique;
     font-weight: bold;
 }
-
+/**
+ * Make the buttons start after the labels.
+ */
+div.buttons {
+    margin-left: 7.5em;
+}
 /**
  * The class hidden should set visibility to hidden.
  * It's not limited to labels.
@@ -246,63 +228,6 @@ div.required label {
 .hidden {
     visibility: hidden;
 }
-
-div.create form select {
-    width: 12em;
-    margin-bottom: 0.4em;
-}
-
-div.create form div.radio {
-    margin-left: 10em;
-}
-
-div.create form br {
-    clear: left;
-}
-
-div.create form input.join {
-    width: auto;
-    float: none;
-}
-
-/* Styles for edit pages, like person edit etc.. */
-/*
-div.edit {
-    display: block;
-    width: 25em;
-    margin-bottom: 1em;
-    margin-top: 1em;
-}
-*/
-
-div.edit {
-    background: #d9e2ef;
-    border: 1px solid black;
-    color: black;
-    width: 500px;
-    font-size: 15px;
-    margin-bottom: 1em;
-    padding-left: 1em;
-    text-align: left;
-    white-space: normal;
-}
-
-div.edit form {
-    padding: 0.5em 0 1em 0;
-}
-
-div.edit form br {
-    clear: left;
-}
-
-div.edit div.help {
-    border: 1px dotted black;
-    padding: 2px;
-    margin: 2px;
-    margin-bottom: 0.5em;
-}
-
-/*div.edit h3 { margin: 0; }*/
 
 
 /* A generic floating box for page contents. */
@@ -314,13 +239,13 @@ div.box {
     margin: 0;
     margin-bottom: 1em;
 
-    // No padding on the box, this belongs in the info/important/... class.
+    /* No padding on the box, this belongs in the info/important/... class. */
     padding: 0;
     border: 1px solid;
 }
 
 div.box h3 {
-    // No margin or padding on the box, this belongs in the info/important/... class.
+    /* No margin or padding on the box, this belongs in the info/important/... class. */
     padding: 0; 
     margin: 0;
     font-size: 105%; 
@@ -329,9 +254,7 @@ div.box h3 {
 div.box h4 {
     margin: 0;
 }
-div.box form {
-    margin: 0;
-}
+
 div.box input {
     font-size: 80%;
     margin-top: 2px;
@@ -415,6 +338,35 @@ div.important h3 {
 div.important div.item {
     border-color: #da9;
 }
+
+/**
+ * Boxes for editing items on view-pages.
+ */
+div.edit {
+    margin: 10px 10px 10px 0;
+}
+div.edit form {
+    padding-top: 10px;
+}
+div.edit h3 {
+    margin: 0px;
+    background: #bde;
+}
+
+div.edit {
+    background: #d9e2ef;
+    border: 1px solid black;
+    color: black;
+    width: 500px;
+    font-size: 15px;
+    margin-bottom: 1em;
+    padding-left: 1em;
+    text-align: left;
+    white-space: normal;
+}
+
+/*div.edit h3 { margin: 0; }*/
+
 
 /* The topmost box on almost all the pages */
 div.view_info {
@@ -504,25 +456,6 @@ a.perm_all:hover { color: gray; }
 
 div.tree { margin-left: 2em; }
 
-/* Box containing form for adding/setting items on view-pages. */
-div.form {
-    margin: 10px 10px 10px 0;
-}
-
-div.form h3 {
-    margin: 0px;
-    background: #bde;
-}
-
-/* Styles for email pages. */
-/*
-div.email_view form {
-    margin: 0;
-}
-div.email_view h2 {
-    margin: 1em 0 0 0;
-}
-*/
 div.email_view {
     background: #d9e2ef;
     border: 1px solid black;
@@ -536,22 +469,9 @@ div.email_view {
     white-space: normal; 
 }
 
-div.email_view select {
-    width: 13em;
-}
-
 div.email_view table {
     width: 100%;
 }
-
-/*
-div.td_email_view {
-    padding: 0 0.5em 0 0.5em;
-    width: auto;
-    font-style: oblique;
-    font-weight: bold;
-}
-*/
 
 /* Styles for the Error-pages. */
 div.errorpage { margin: 5px; }
@@ -626,19 +546,20 @@ div.motd span.when {
     margin-left: 5px;
 }
 
-div.motd_edit input {
-    font-size: 70%;
-}
-
-div.motd_edit input[type=text] {
+div.motd input.text,
+div.motd textarea {
     width: 400px;
 }
 
-div.motd_edit textarea {
-    width: 400px;
+div.motd label {
+    width: 5em;
 }
 
-/* Styles for options-page. */
+/**
+ * Styles for options-page.
+ * FIXME: Still using tables for this one, should be
+ * converted to CSS formated form.
+ */
 div.options form {
     margin: 0;
 }
@@ -648,17 +569,14 @@ div.options th {
     padding-left: 10px;
     font-size: 125%;
 }
-
 div.options td {
     padding-right: 5px;
 }
-
 div.options td.shelp {
     font-style: italic;
     font-size: 95%;
     padding: 1px 0 5px 5px;
 }
-
 div.options td.buttons {
     padding-top: 0.8em;
 }
